src/test/ui/enum-variant-generic-args.stderr
error[E0308]: mismatched types
  --> $DIR/enum-variant-generic-args.rs:9:25
   |
LL |         Self::TSVariant(());
   |                         ^^ expected type parameter, found ()
   |
   = note: expected type `T`
              found type `()`

error[E0109]: type arguments are not allowed for this type
  --> $DIR/enum-variant-generic-args.rs:11:27
   |
LL |         Self::TSVariant::<()>(());
   |                           ^^ type argument not allowed

error[E0109]: type arguments are not allowed for this type
  --> $DIR/enum-variant-generic-args.rs:13:16
   |
LL |         Self::<()>::TSVariant(());
   |                ^^ type argument not allowed

error[E0308]: mismatched types
  --> $DIR/enum-variant-generic-args.rs:13:31
   |
LL |         Self::<()>::TSVariant(());
   |                               ^^ expected type parameter, found ()
   |
   = note: expected type `T`
              found type `()`

error[E0109]: type arguments are not allowed for this type
  --> $DIR/enum-variant-generic-args.rs:16:16
   |
LL |         Self::<()>::TSVariant::<()>(());
   |                ^^ type argument not allowed

error[E0109]: type arguments are not allowed for this type
  --> $DIR/enum-variant-generic-args.rs:16:33
   |
LL |         Self::<()>::TSVariant::<()>(());
   |                                 ^^ type argument not allowed

error[E0308]: mismatched types
  --> $DIR/enum-variant-generic-args.rs:22:29
   |
LL |         Self::SVariant { v: () };
   |                             ^^ expected type parameter, found ()
   |
   = note: expected type `T`
              found type `()`

error[E0109]: type arguments are not allowed for this type
  --> $DIR/enum-variant-generic-args.rs:24:26
   |
LL |         Self::SVariant::<()> { v: () };
   |                          ^^ type argument not allowed

error[E0308]: mismatched types
  --> $DIR/enum-variant-generic-args.rs:24:35
   |
LL |         Self::SVariant::<()> { v: () };
   |                                   ^^ expected type parameter, found ()
   |
   = note: expected type `T`
              found type `()`

error[E0109]: type arguments are not allowed for this type
  --> $DIR/enum-variant-generic-args.rs:27:16
   |
LL |         Self::<()>::SVariant { v: () };
   |                ^^ type argument not allowed

error[E0308]: mismatched types
  --> $DIR/enum-variant-generic-args.rs:27:35
   |
LL |         Self::<()>::SVariant { v: () };
   |                                   ^^ expected type parameter, found ()
   |
   = note: expected type `T`
              found type `()`

error[E0109]: type arguments are not allowed for this type
  --> $DIR/enum-variant-generic-args.rs:30:16
   |
LL |         Self::<()>::SVariant::<()> { v: () };
   |                ^^ type argument not allowed

error[E0109]: type arguments are not allowed for this type
  --> $DIR/enum-variant-generic-args.rs:30:32
   |
LL |         Self::<()>::SVariant::<()> { v: () };
   |                                ^^ type argument not allowed

error[E0308]: mismatched types
  --> $DIR/enum-variant-generic-args.rs:30:41
   |
LL |         Self::<()>::SVariant::<()> { v: () };
   |                                         ^^ expected type parameter, found ()
   |
   = note: expected type `T`
              found type `()`

error[E0109]: type arguments are not allowed for this type
  --> $DIR/enum-variant-generic-args.rs:40:29
   |
LL |     Enum::<()>::TSVariant::<()>(());
   |                             ^^ type argument not allowed

error[E0109]: type arguments are not allowed for this type
  --> $DIR/enum-variant-generic-args.rs:43:24
   |
LL |     Alias::TSVariant::<()>(());
   |                        ^^ type argument not allowed

error[E0109]: type arguments are not allowed for this type
  --> $DIR/enum-variant-generic-args.rs:45:30
   |
LL |     Alias::<()>::TSVariant::<()>(());
   |                              ^^ type argument not allowed

error[E0109]: type arguments are not allowed for this type
  --> $DIR/enum-variant-generic-args.rs:48:29
   |
LL |     AliasFixed::TSVariant::<()>(());
   |                             ^^ type argument not allowed

error[E0107]: wrong number of type arguments: expected 0, found 1
  --> $DIR/enum-variant-generic-args.rs:50:18
   |
LL |     AliasFixed::<()>::TSVariant(());
   |                  ^^ unexpected type argument

error[E0107]: wrong number of type arguments: expected 0, found 1
  --> $DIR/enum-variant-generic-args.rs:52:18
   |
LL |     AliasFixed::<()>::TSVariant::<()>(());
   |                  ^^ unexpected type argument

error[E0109]: type arguments are not allowed for this type
  --> $DIR/enum-variant-generic-args.rs:52:35
   |
LL |     AliasFixed::<()>::TSVariant::<()>(());
   |                                   ^^ type argument not allowed

error[E0109]: type arguments are not allowed for this type
  --> $DIR/enum-variant-generic-args.rs:58:28
   |
LL |     Enum::<()>::SVariant::<()> { v: () };
   |                            ^^ type argument not allowed

error[E0109]: type arguments are not allowed for this type
  --> $DIR/enum-variant-generic-args.rs:61:23
   |
LL |     Alias::SVariant::<()> { v: () };
   |                       ^^ type argument not allowed

error[E0109]: type arguments are not allowed for this type
  --> $DIR/enum-variant-generic-args.rs:63:29
   |
LL |     Alias::<()>::SVariant::<()> { v: () };
   |                             ^^ type argument not allowed

error[E0109]: type arguments are not allowed for this type
  --> $DIR/enum-variant-generic-args.rs:66:28
   |
LL |     AliasFixed::SVariant::<()> { v: () };
   |                            ^^ type argument not allowed

error[E0107]: wrong number of type arguments: expected 0, found 1
  --> $DIR/enum-variant-generic-args.rs:68:18
   |
LL |     AliasFixed::<()>::SVariant { v: () };
   |                  ^^ unexpected type argument

error[E0107]: wrong number of type arguments: expected 0, found 1
  --> $DIR/enum-variant-generic-args.rs:70:18
   |
LL |     AliasFixed::<()>::SVariant::<()> { v: () };
   |                  ^^ unexpected type argument

error[E0109]: type arguments are not allowed for this type
  --> $DIR/enum-variant-generic-args.rs:70:34
   |
LL |     AliasFixed::<()>::SVariant::<()> { v: () };
   |                                  ^^ type argument not allowed

error: aborting due to 28 previous errors

Some errors occurred: E0107, E0109, E0308.
For more information about an error, try `rustc --explain E0107`.
